--- a/changedcss.css
+++ b/changedcss.css
@@ -113,10 +113,7 @@ td > button:hover{
     color:rgb(240, 173, 148);
 }
 
-.left_allign{
-    float: left;
-    color: green;
-}
+
 .green{
     color: green;
 }
